# se-toolkit-lab-8

./: REPORT.md  docker-compose.yml  pyproject.toml
backend/src/lms_backend/db/: items.py
caddy/: Caddyfile
mcp/mcp-obs/: README.md  pyproject.toml
mcp/mcp-obs/src/mcp_obs/: __init__.py  server.py
nanobot/: Dockerfile  README.md  entrypoint.py  pyproject.toml
nanobot/workspace/skills/lms/: SKILL.md
nanobot/workspace/skills/observability/: SKILL.md
