[project]
name = "mcp-obs"
version = "0.1.0"
description = "MCP server for observability tools (VictoriaLogs and VictoriaTraces)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.26.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
]

[tool.uv.sources]
mcp-lms = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_obs"]
